better mobile view

--- a/index.html
+++ b/index.html
@@ -17,20 +17,17 @@
 			<!-- Divy siatki będą generowane przez JS -->
 		</div>
 	</div>
-	<div id="arrow-panel" class="position-bottom">
-		<div>
-			<button id="level">1</button>
-			<button id="arrow-up">⬆️</button>
-			<button id="restart">💀</button>
-		</div>
-		<div>
-			<button id="arrow-left">⬅️</button>
-			<button id="repin">🔀</button>
-			<button id="arrow-right">➡️</button>
-		</div>
-		<div>
-			<button id="arrow-down">⬇️</button>
-		</div>
+	<div id="arrow-panel-controls" class="arrow-panel position-top">
+		<button id="level">poziom <span id="level-number">1</span></button>
+		<button id="restart">💀</button>
+	</div>
+	<div id="arrow-panel-left" class="arrow-panel position-bottom">
+		<button id="arrow-up">⬆️</button>
+		<button id="arrow-down">⬇️</button>
+	</div>
+	<div id="arrow-panel-right" class="arrow-panel position-bottom">
+		<button id="arrow-left">⬅️</button>
+		<button id="arrow-right">➡️</button>
 	</div>
 	<div id="win-overlay" style="display:none;">
 		<div class="win-content">
